crates/ars-core/tests/snapshots/snapshot_smoke__snapshot_root_pressed.snap
---
source: crates/ars-core/tests/snapshot_smoke.rs
expression: "snapshot_attrs(SnapshotState::Pressed, false, SnapshotPart::Root)"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "snapshot-toggle",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "pressed",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Example toggle",
            ),
        ),
        (
            Aria(
                Pressed,
            ),
            String(
                "true",
            ),
        ),
        (
            Id,
            String(
                "example-toggle",
            ),
        ),
        (
            Role,
            String(
                "button",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
    ],
    styles: [],
}
